--- a/DailyReport/2025/2025-10.md
+++ b/DailyReport/2025/2025-10.md
@@ -69,3 +69,8 @@
 - プロを目指す人のためのRuby入門（20/551p（+0p））
 - GitHub実践入門（77/285p（+0p））打切
 - 実用Git（18/546p（+18p））
+
+### 2025年10月17日
+- 独習JavaScript（80/557p（+0p））
+- プロを目指す人のためのRuby入門（20/551p（+0p））
+- 実用Git（87/546p（+69p））
