--- a/DailyReport/2025/2025-10.md
+++ b/DailyReport/2025/2025-10.md
@@ -84,3 +84,8 @@
 - 独習JavaScript（127/557p（+0p））
 - プロを目指す人のためのRuby入門（157/551p（+137p））
 - 実用Git（159/546p（+72p））
+
+### 2025年10月20日
+- 独習JavaScript（127/557p（+0p））
+- プロを目指す人のためのRuby入門（157/551p（+0p））
+- 実用Git（159/546p（+0p））
