--- a/DailyReport/2025/2025-10.md
+++ b/DailyReport/2025/2025-10.md
@@ -99,3 +99,8 @@
 - 独習JavaScript（127/557p（+0p））
 - プロを目指す人のためのRuby入門（157/551p（+0p））
 - 実用Git（294/546p（+56p））
+
+### 2025年10月23日
+- 独習JavaScript（127/557p（+0p））
+- プロを目指す人のためのRuby入門（157/551p（+0p））
+- 実用Git（417/546p（+123p））
