--- a/DailyReport/2025/2025-10.md
+++ b/DailyReport/2025/2025-10.md
@@ -139,3 +139,8 @@
 - 独習JavaScript（127/557p（+0p））復習
 - プロを目指す人のためのRuby入門（173/551p（+16p））
 - HTML&CSSとWebデザイン入門講座（123/319p（+36p））
+
+### 2025年10月31日
+- 独習JavaScript（127/557p（+0p））復習
+- プロを目指す人のためのRuby入門（173/551p（+0p））
+- HTML&CSSとWebデザイン入門講座（153/319p（+30p））
