--- a/DailyReport/2025/2025-11.md
+++ b/DailyReport/2025/2025-11.md
@@ -37,3 +37,12 @@
 - プロを目指す人のためのRuby入門（191/551p（+0p））
 - Docker&仮想サーバー完全入門（110/239p（+0p））
 - Docker&Kubernetesのきほんのきほん（121/325p（+0p））
+
+### 2025年11月9日
+- 独習JavaScript（182/557p（+0p））
+- プロを目指す人のためのRuby入門（191/551p（+0p））
+- Docker&仮想サーバー完全入門（110/239p（+0p））
+- Docker&Kubernetesのきほんのきほん（228/325p（+118p））
+- ゼロからはじめるLinuxサーバー構築・運用ガイド（259/259p（+259p））完了
+- AWSではじめるインフラ構築入門（0/407p（+0p））
+- HTTPの教科書（91/307p（+91p））
