--- a/DailyReport/2025/2025-11.md
+++ b/DailyReport/2025/2025-11.md
@@ -66,3 +66,8 @@
 - プロを目指す人のためのRuby入門（191/551p（+0p））
 - AWSではじめるインフラ構築入門（32/407p（+0p））
 - HTTPの教科書（307/307p（+137p））完了
+
+### 2025年11月13日
+- 独習JavaScript（182/557p（+0p））
+- プロを目指す人のためのRuby入門（191/551p（+0p））
+- AWSではじめるインフラ構築入門（102/407p（+70p））
