2025年11月14日分の日報を追記

--- a/DailyReport/2025/2025-11.md
+++ b/DailyReport/2025/2025-11.md
@@ -71,3 +71,8 @@
 - 独習JavaScript（182/557p（+0p））
 - プロを目指す人のためのRuby入門（191/551p（+0p））
 - AWSではじめるインフラ構築入門（102/407p（+70p））
+
+### 2025年11月14日
+- 独習JavaScript（182/557p（+0p））
+- プロを目指す人のためのRuby入門（191/551p（+0p））
+- AWSではじめるインフラ構築入門（204/407p（+102p））
