--- a/DailyReport/2025/2025-11.md
+++ b/DailyReport/2025/2025-11.md
@@ -81,3 +81,10 @@
 - 独習JavaScript（182/557p（+0p））
 - プロを目指す人のためのRuby入門（191/551p（+0p））
 - AWSではじめるインフラ構築入門（407/407p（+203p））完了
+
+### 2025年11月16日
+- 独習JavaScript（182/557p（+0p））
+- プロを目指す人のためのRuby入門（252/551p（+61p））
+- Webを支える技術（76/377p（+76p））
+- HTML&CSSとWebデザイン（実践講座）（0/351p（+0p））
+- JavaScript（入門講座）（0/343p（+0p））
