2025年11月19日分の日報を追記

--- a/DailyReport/2025/2025-11.md
+++ b/DailyReport/2025/2025-11.md
@@ -102,3 +102,9 @@
 - Webを支える技術（377/377p（+223p））完了
 - HTML&CSSとWebデザイン（実践講座）（0/351p（+0p））
 - JavaScript（入門講座）（0/343p（+0p））
+
+### 2025年11月19日
+- 独習JavaScript（217/557p（+0p））
+- プロを目指す人のためのRuby入門（303/551p（+51p））
+- HTML&CSSとWebデザイン（実践講座）（0/351p（+0p））
+- JavaScript（入門講座）（0/343p（+0p））
