--- a/DailyReport/2025/2025-11.md
+++ b/DailyReport/2025/2025-11.md
@@ -108,3 +108,9 @@
 - プロを目指す人のためのRuby入門（303/551p（+51p））
 - HTML&CSSとWebデザイン（実践講座）（0/351p（+0p））
 - JavaScript（入門講座）（0/343p（+0p））
+
+### 2025年11月20日
+- 独習JavaScript（217/557p（+0p））
+- プロを目指す人のためのRuby入門（387/551p（+84p））
+- HTML&CSSとWebデザイン（実践講座）（0/351p（+0p））
+- JavaScript（入門講座）（0/343p（+0p））
