--- a/DailyReport/2025/2025-11.md
+++ b/DailyReport/2025/2025-11.md
@@ -126,3 +126,9 @@
 - プロを目指す人のためのRuby入門（437/551p（+0p））
 - HTML&CSSとWebデザイン（実践講座）（47/351p（+47p））
 - JavaScript（入門講座）（46/343p（+46p））
+
+### 2025年11月23日
+- 独習JavaScript（217/557p（+0p））
+- プロを目指す人のためのRuby入門（475/551p（+38p））
+- HTML&CSSとWebデザイン（実践講座）（47/351p（+0p））
+- JavaScript（入門講座）（46/343p（+0p））
