2025年11月25日分の日報を追記

--- a/DailyReport/2025/2025-11.md
+++ b/DailyReport/2025/2025-11.md
@@ -138,3 +138,8 @@
 - プロを目指す人のためのRuby入門（551/551p（+76p））完了
 - HTML&CSSとWebデザイン（実践講座）（47/351p（+0p））
 - JavaScript（入門講座）（46/343p（+0p））
+
+### 2025年11月25日
+- 独習JavaScript（217/557p（+0p））
+- HTML&CSSとWebデザイン（実践講座）（47/351p（+0p））
+- JavaScript（入門講座）（121/343p（+75p））
