2025年11月26日分の日報を追記

--- a/DailyReport/2025/2025-11.md
+++ b/DailyReport/2025/2025-11.md
@@ -143,3 +143,8 @@
 - 独習JavaScript（217/557p（+0p））
 - HTML&CSSとWebデザイン（実践講座）（47/351p（+0p））
 - JavaScript（入門講座）（121/343p（+75p））
+
+### 2025年11月26日
+- 独習JavaScript（217/557p（+0p））
+- HTML&CSSとWebデザイン（実践講座）（47/351p（+0p））
+- JavaScript（入門講座）（199/343p（+78p））
