--- a/DailyReport/2025/2025-11.md
+++ b/DailyReport/2025/2025-11.md
@@ -148,3 +148,8 @@
 - 独習JavaScript（217/557p（+0p））
 - HTML&CSSとWebデザイン（実践講座）（47/351p（+0p））
 - JavaScript（入門講座）（199/343p（+78p））
+
+### 2025年11月27日
+- 独習JavaScript（217/557p（+0p））
+- HTML&CSSとWebデザイン（実践講座）（148/351p（+101p））
+- JavaScript（入門講座）（343/343p（+144p））完了
